--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_scanner">
+    app:startDestination="@+id/navigation_institutions">
 
     <fragment
         android:id="@+id/navigation_scanner"
         android:name="pelikan.bp.pelikanj.ui.scanner.ScannerFragment"
-        android:label="@string/title_scanner"
+        android:label="@string/title_scanner_fragment"
         tools:layout="@layout/fragment_scanner" />
 
     <!-- label -> nápis nahoře, nápis dole udělám v bottom_nav_menu.xml -->
@@ -21,14 +21,61 @@
     <fragment
         android:id="@+id/navigation_profile"
         android:name="pelikan.bp.pelikanj.ui.profile.ProfileFragment"
-        android:label="@string/title_profile"
-        tools:layout="@layout/fragment_profile" />
+        android:label="@string/title_profile_fragment"
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_navigation_profile_to_navigation_logged_user"
+            app:destination="@id/navigation_logged_user" />
+        <action
+            android:id="@+id/action_navigation_profile_to_navigation_registration"
+            app:destination="@id/navigation_registration" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_more"
         android:name="pelikan.bp.pelikanj.ui.more.MoreFragment"
-        android:label="@string/title_more"
-        tools:layout="@layout/fragment_more" />
+        android:label="@string/title_more_fragment"
+        tools:layout="@layout/fragment_more" >
+        <action
+            android:id="@+id/action_navigation_more_to_send_exhibit"
+            app:destination="@id/send_exhibit" />
+        <action
+            android:id="@+id/action_navigation_more_to_language_settings"
+            app:destination="@id/language_settings" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/send_exhibit"
+        android:name="pelikan.bp.pelikanj.ui.more.SendExhibitFragment"
+        android:label="@string/send_exhibit"
+        tools:layout="@layout/fragment_send_exhibit" />
+
+    <fragment
+        android:id="@+id/language_settings"
+        android:name="pelikan.bp.pelikanj.ui.more.languageSetting.LanguageSettingFragment"
+        android:label="Nastavení jazyka"
+        tools:layout="@layout/fragment_language_setting" />
+
+    <fragment
+        android:id="@+id/navigation_logged_user"
+        android:name="pelikan.bp.pelikanj.ui.profile.LoggedUserFragment"
+        android:label="@string/title_profile_fragment"
+        tools:layout="@layout/fragment_logged_user" >
+        <action
+            android:id="@+id/action_navigation_logged_user_to_navigation_profile"
+            app:destination="@id/navigation_profile" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_registration"
+        android:name="pelikan.bp.pelikanj.ui.profile.RegistrationFragment"
+        android:label="@string/title_profile_fragment"
+        tools:layout="@layout/fragment_registration" >
+        <action
+            android:id="@+id/action_navigation_logged_user_to_navigation_profile"
+            app:destination="@id/navigation_profile" />
+    </fragment>
+
 
 
 </navigation>
