--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.more.MoreFragment">
+    tools:context=".ui.more.MoreFragment"
+    android:layout_marginBottom="?attr/actionBarSize">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <com.ms.square.android.expandabletextview.ExpandableTextView
-        android:id="@+id/expand_text_view"
+        android:id="@+id/expand_text_view_about_us"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        expandableTextView:animDuration="100"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
+        expandableTextView:animDuration="200"
         expandableTextView:maxCollapsedLines="1"
-        expandableTextView:collapseDrawable="@drawable/ic_baseline_person_24"
-        expandableTextView:expandDrawable="@drawable/ic_baseline_person_24"
+        expandableTextView:collapseDrawable="@drawable/ic_baseline_arrow_drop_up_24"
+        expandableTextView:expandDrawable="@drawable/ic_baseline_arrow_drop_down_24"
         >
 
         <TextView
@@ -25,18 +32,74 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:textColor="#666666"
+            android:textSize="25sp"
+            android:text="@string/about_us"/>
+
+        <ImageButton
+            android:id="@+id/expand_collapse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|end"
+            android:layout_marginTop="-40dp"
+            android:background="@android:color/transparent" />
+
+        <TextView
+            android:id="@+id/expandable_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="-30dp"
+            android:textColor="#666666"
+            android:textSize="20sp" />
+
+    </com.ms.square.android.expandabletextview.ExpandableTextView>
+
+
+    <TextView
+        android:id="@+id/sendExhibit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/send_exhibit"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@+id/expand_text_view_about_us" />
+
+
+
+    <com.ms.square.android.expandabletextview.ExpandableTextView
+        android:id="@+id/expand_text_view_become_translator"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/sendExhibit"
+        app:layout_constraintTop_toBottomOf="@id/sendExhibit"
+        expandableTextView:animDuration="200"
+        expandableTextView:maxCollapsedLines="1"
+        expandableTextView:collapseDrawable="@drawable/ic_baseline_arrow_drop_up_24"
+        expandableTextView:expandDrawable="@drawable/ic_baseline_arrow_drop_down_24"
+        >
+
+        <TextView
+            android:id="@+id/expandable_head"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:textColor="#666666"
             android:textSize="25sp"
-            android:text="O nás"/>
+            android:text="@string/become_translator"/>
 
         <ImageButton
             android:id="@id/expand_collapse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|end"
-            android:layout_marginTop="-30dp"
+            android:layout_marginTop="-40dp"
             android:background="@android:color/transparent" />
 
         <TextView
@@ -46,45 +109,23 @@
             android:textAlignment="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="-20dp"
+            android:layout_marginTop="-30dp"
             android:textColor="#666666"
             android:textSize="20sp" />
 
-
-
     </com.ms.square.android.expandabletextview.ExpandableTextView>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Pošli exponát"
-        android:textAlignment="center"
-        android:textSize="25sp"
-        app:layout_constraintTop_toBottomOf="@+id/expand_text_view"
-        tools:layout_editor_absoluteX="-16dp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/language_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Něco dalšího"
+        android:text="@string/language_settings"
         android:textAlignment="center"
         android:textSize="25sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/expand_text_view_become_translator"
+        />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Staň se překladatelem"
-        android:textAlignment="center"
-        android:textSize="25sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="0dp" />
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
