--- a/app/src/main/res/layout/fragment_language_setting.xml
+++ b/app/src/main/res/layout/fragment_language_setting.xml
@@ -1,34 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.more.languageSetting.LanguageSettingFragment"
+    android:layout_marginBottom="?attr/actionBarSize"
     android:orientation="vertical"
-    android:layout_marginBottom="?attr/actionBarSize">
+    tools:context=".ui.more.languageSetting.LanguageSettingFragment">
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search_language_view"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="6dp"
+    <FrameLayout
+        android:id="@+id/language_settings_fragment"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/search_view_background"
-        app:queryHint="@string/choose_your_language"
-        app:iconifiedByDefault="false">
+        android:layout_height="wrap_content"
+        android:elevation="0dp"
+        android:orientation="vertical">
 
-    </androidx.appcompat.widget.SearchView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search_language_view"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="6dp"
+                android:background="@drawable/search_view_background"
+                app:iconifiedByDefault="false"
+                app:queryHint="@string/choose_your_language">
 
-    </androidx.recyclerview.widget.RecyclerView>
+            </androidx.appcompat.widget.SearchView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="5dp"
+                >
+
+            </androidx.recyclerview.widget.RecyclerView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/overbox"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/overbox"
+            android:elevation="0dp"
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="parent">
+
+        </LinearLayout>
+    </FrameLayout>
+
 
 
 </LinearLayout>
