--- a/app/src/main/res/layout/fragment_pick_exhibit.xml
+++ b/app/src/main/res/layout/fragment_pick_exhibit.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="55dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:gravity="center_horizontal"
@@ -160,6 +160,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:layout_marginStart="40dp"
+            android:layout_marginBottom="?attr/actionBarSize"
             android:text="@string/search_translation" />
 
     </LinearLayout>
