--- a/app/src/main/res/layout/institution_card.xml
+++ b/app/src/main/res/layout/institution_card.xml
@@ -28,6 +28,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="200dp"
+        android:layout_marginBottom="5dp"
         android:elevation="4dp"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
