--- a/app/src/main/res/layout/fragment_scanner.xml
+++ b/app/src/main/res/layout/fragment_scanner.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scanner_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -22,7 +21,18 @@
         app:frameSize="0.75"
         app:frameThickness="2dp"
         app:maskColor="#77000000"
-        tools:ignore="MissingClass" >
+        >
     </com.budiyev.android.codescanner.CodeScannerView>
+
+    <LinearLayout
+        android:id="@+id/overbox"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/overbox"
+        android:elevation="0dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </LinearLayout>
 
 </FrameLayout>
