--- a/app/src/main/res/layout/translation_card.xml
+++ b/app/src/main/res/layout/translation_card.xml
@@ -6,50 +6,38 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
+    android:layout_marginBottom="?attr/actionBarSize"
     app:layout_constraintBottom_toBottomOf="parent">
-
-
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/animationSuccess"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="80dp"
-        android:elevation="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:lottie_autoPlay="false"
-        app:lottie_loop="false"
-        app:lottie_rawRes="@raw/success_2" />
 
     <LinearLayout
         android:id="@+id/popup"
-        android:paddingTop="60dp"
-        android:background="@drawable/card"
-        android:orientation="vertical"
         android:layout_width="340dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="25dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/card"
         android:elevation="8dp"
         android:gravity="center"
+        android:orientation="vertical"
+        android:paddingTop="20dp"
+        android:paddingBottom="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/animation_success_text"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="30dp"
-            android:textStyle="bold"
-            android:textColor="#343434"
-            android:textSize="24sp"
+            android:id="@+id/translated_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="50dp"
+            android:gravity="center_horizontal"
+            android:text="@string/translated_text"
+            android:textColor="#343434"
+            android:textSize="18sp"/>
 
     </LinearLayout>
 
