almost final app

--- a/app/src/main/res/layout/translation_card.xml
+++ b/app/src/main/res/layout/translation_card.xml
@@ -10,13 +10,13 @@
     app:layout_constraintBottom_toBottomOf="parent">
 
     <LinearLayout
-        android:id="@+id/popup"
+        android:id="@+id/popup_translation"
         android:layout_width="340dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="90dp"
         android:background="@drawable/card"
         android:elevation="8dp"
         android:gravity="center"
@@ -30,6 +30,7 @@
 
         <TextView
             android:id="@+id/translated_text"
+            android:scrollbars="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
