--- a/app/src/main/res/layout/fragment_pick_exhibit.xml
+++ b/app/src/main/res/layout/fragment_pick_exhibit.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pick_exhibit_fragment_scrollView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:layout_marginBottom="?attr/actionBarSize"
-    android:background="@drawable/background_small_small"
-    android:orientation="vertical"
+    android:id="@+id/main_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+
     tools:context=".ui.findExhibit.PickExhibitFragment">
+
+    <ScrollView
+        android:id="@+id/pick_exhibit_fragment_scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+
+
+        android:background="@drawable/background_small_small"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <FrameLayout
             android:id="@+id/pick_exhibit_fragment"
@@ -167,7 +179,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="36dp"
-                    android:layout_marginBottom="100dp"
+                    android:layout_marginBottom="20dp"
                     android:text="@string/search_translation" />
 
             </LinearLayout>
@@ -185,4 +197,5 @@
 
         </FrameLayout>
 
-</ScrollView>
+    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
